Create UI and swagger implementation to allow user to sign in
