# backend/router/router.middleware.js
@@ -1,4 +1,4 @@
-const secret = require("../config/authentication.config").secret
+const secret = require("../config/authentication.config").AccessSecret
 const httpError = require("http-errors")
 const jsonWebToken = require("jsonwebtoken")
 
@@ -6,10 +6,11 @@ module.exports = {
  async grantAccess(role, request, response, next) {
    verifyToken(request)
     .then((payload) => {
-     if(payload.role !== role){
-      return response.status(403).send("You do not have the correct permissions to access this content.")
+     if(role !== ""){
+      if (payload.role !== role) {return response.status(403).send("You do not have the correct permissions to access this content.")} 
+      else {next()}
      }
-     else { next() }
+     next()
     })
     .catch((error) => {return response.status(error.status).send(error.message)})
  },
@@ -17,8 +18,7 @@ module.exports = {
 
 async function verifyToken(request) {
  try {
-  const token = request.headers.authorization.split(" ")[1]
-  return await jsonWebToken.verify(token, secret)
+  return await jsonWebToken.verify(request.headers.authorization.split(" ")[1], secret)
  } catch (error) {
   throw httpError(401, "The provided token is invalid or has expired.")
  }
